Updating the API documentation comments
