# internal/doc/routes.go
@@ -28,6 +28,14 @@ func (d *docRouter) Prefix() string {
 	return "doc"
 }
 
+// GetOpenApiJson godoc
+// @Summary Returns the OpenAPI document for the current service
+// @Description Returns the OpenAPI document for the current service
+// @Tags doc
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} environment.Environment
+// @Router /api/v1/doc [get]
 func (d *docRouter) Routes(prefix string, r chi.Router) {
 	filesDir := ""
 	if d.cfg.IsSet("doc.path") {
