# internal/environment/routes.go
@@ -11,6 +11,9 @@ func NewEnvironmentAPIRouter() router.APIRouter {
 	return &environmentRouter{}
 }
 
+// Environment describes a single environment
+type Environment struct{}
+
 // https://www.google.com/search?client=firefox-b-d&q=golang+chi+get+query+params
 // https://github.com/pressly/imgry/blob/master/server/server.go
 // https://github.com/pressly/imgry/blob/master/server/middleware.go
@@ -19,18 +22,61 @@ func NewEnvironmentAPIRouter() router.APIRouter {
 
 type environmentRouter struct{}
 
+// CreateEnvironment godoc
+// @Summary Creates a new environment.
+// @Description Creates a new environment based on the provided information.
+// @Tags environment
+// @Accept  json
+// @Produce  json
+// @Param id body environment.Environment true "Environment ID"
+// @Success 201 {object} environment.Environment
+// @Failure 404 {object} int
+// @Failure 500 {object} int
+// @Router /api/v1/environment [put]
 func (h *environmentRouter) create(w http.ResponseWriter, r *http.Request) {
-
+	//render.Status()
 }
 
+// DeleteEnvironment godoc
+// @Summary Deletes an environment.
+// @Description Deletes the environment with the given id.
+// @Tags environment
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Environment ID"
+// @Success 202 {object} environment.Environment
+// @Failure 404 {object} int
+// @Failure 500 {object} int
+// @Router /api/v1/environment/{id} [delete]
 func (h *environmentRouter) delete(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// ShowEnvironment godoc
+// @Summary Provide information about an environment.
+// @Description Returns information about the environment with the given id.
+// @Tags environment
+// @Accept  json
+// @Produce  json
+// @Param id path string true "Environment ID"
+// @Success 200 {object} environment.Environment
+// @Failure 404 {object} int
+// @Failure 500 {object} int
+// @Router /api/v1/environment/{id} [get]
 func (h *environmentRouter) get(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// ListEnvironmentIDs godoc
+// @Summary Provide the list of known environment IDs
+// @Description Returns a list of known environment IDs.
+// @Tags environment
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} string
+// @Failure 404 {object} int
+// @Failure 500 {object} int
+// @Router /api/v1/environment/ [get]
 func (h *environmentRouter) list(w http.ResponseWriter, r *http.Request) {
 
 }
